NetBSD Problem Report #52129

From tsutsui@ceres.dti.ne.jp  Sun Apr  2 08:17:09 2017
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 359C97A26A
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  2 Apr 2017 08:17:09 +0000 (UTC)
Message-Id: <201704020817.v328H3rW021473@ceres.dti.ne.jp>
Date: Sun, 2 Apr 2017 17:17:03 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: NetBSD/hppa 7.1 fails to boot on 712/60
X-Send-Pr-Version: 3.95

>Number:         52129
>Category:       port-hppa
>Synopsis:       NetBSD/hppa 7.1 fails to boot on 712/60
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    port-hppa-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 02 08:20:00 +0000 2017
>Closed-Date:    Thu Apr 20 07:06:16 +0000 2017
>Last-Modified:  Thu Apr 20 07:06:16 +0000 2017
>Originator:     Izumi Tsutsui
>Release:        NetBSD 7.1
>Organization:
>Environment:
System: NetBSD 7.1 
Architecture: hppa
Machine: hppa
>Description:
Booting NetBSD/hppa 7.1 RAMDISK kernel fails to boot no 712/60:

---
----------------------------------------------------------------------------
BootRom Version    2.3  
Memory Size:  128 MB
----------------------------------------------------------------------------




(c) Copyright 1990-1993, Hewlett-Packard Company.
All rights reserved

Press <ESCAPE> to stop boot sequence.
Selecting a system to boot.

Booting


NetBSD/hp700 FFS/LFS Primary Bootstrap

32bit firmware

booting from partition a
filesystem: FFS
looking up boot.hp700
looking up boot
loading boot at 0x22800...done



>> NetBSD/hp700 LIF/FFS/LFS Boot, Revision 1.4
>> (builds@b4.netbsd.org, Sun Apr 26 16:24:19 UTC 2009)
>> Enter "reset" to reset system.
Boot: [[[dk6a:]netbsd][-a][-c][-d][-s][-v][-q]] :- netbsd-RAMDISK
9750624+3347264+359616=0xd89304
Start @ 0x200000 [1=0xf89000-0xf89304]...
WARNING: Unknown cpu_type for cpu_modelno 600
panic: CPU detection failed. Please report the problem.

---

>How-To-Repeat:
Boot NetBSD/hppa 7.1 netbsd-RAMDISK kernel on 712/60 (and maybe other 712s)

>Fix:
Add proper BOARD types in machdep.c:cpu_model_cpuid()?
(untested)

---
Index: sys/arch/hppa/hppa/machdep.c
===================================================================
RCS file: /cvsroot/src/sys/arch/hppa/hppa/machdep.c,v
retrieving revision 1.4
diff -u -p -d -r1.4 machdep.c
--- sys/arch/hppa/hppa/machdep.c	18 Apr 2014 18:32:00 -0000	1.4
+++ sys/arch/hppa/hppa/machdep.c	2 Apr 2017 08:05:56 -0000
@@ -861,6 +861,9 @@ cpu_model_cpuid(int modelno)
 	case HPPA_BOARD_HPE25:
 	case HPPA_BOARD_HPE35:
 	case HPPA_BOARD_HPE45:
+	case HPPA_BOARD_HP712_60:
+	case HPPA_BOARD_HP712_80:
+	case HPPA_BOARD_HP712_100:
 	case HPPA_BOARD_HP715_80:
 	case HPPA_BOARD_HP715_64:
 	case HPPA_BOARD_HP715_100:

---

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->pending-pullups
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sun, 02 Apr 2017 08:35:15 +0000
State-Changed-Why:
ticket #1396


From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52129 CVS commit: src/sys/arch/hppa/hppa
Date: Sun, 2 Apr 2017 08:31:10 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sun Apr  2 08:31:10 UTC 2017

 Modified Files:
 	src/sys/arch/hppa/hppa: machdep.c

 Log Message:
 PR/52129: NetBSD/hppa 7.1 fails to boot on 712/60

 Add 712/* models to cpu_model_cpuid


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/sys/arch/hppa/hppa/machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Re: PR/52129 CVS commit: src/sys/arch/hppa/hppa
Date: Sun, 2 Apr 2017 18:31:46 +0900

 >  Module Name:	src
 >  Committed By:	skrll
 >  Date:		Sun Apr  2 08:31:10 UTC 2017
 >  
 >  Modified Files:
 >  	src/sys/arch/hppa/hppa: machdep.c
 >  
 >  Log Message:
 >  PR/52129: NetBSD/hppa 7.1 fails to boot on 712/60
 >  
 >  Add 712/* models to cpu_model_cpuid

 With this change, now the RAMDISK kernel no long fails on CPU detection
 but hangs during autoconf(9):

 ---
 >> NetBSD/hp700 LIF/FFS/LFS Boot, Revision 1.4
 >> (builds@b4.netbsd.org, Sun Apr 26 16:24:19 UTC 2009)
 >> Enter "reset" to reset system.
 Boot: [[[dk6a:]netbsd][-a][-c][-d][-s][-v][-q]] :- netbsd-RAMDISK
 9750684+3347264+359616=0xd89304
 Start @ 0x200000 [1=0xf89000-0xf89304]...
 Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
     2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017
     The NetBSD Foundation, Inc.  All rights reserved.
 Copyright (c) 1982, 1986, 1989, 1991, 1993
     The Regents of the University of California.  All rights reserved.

 NetBSD 7.1 (RAMDISK) #0: Sun Apr  2 18:01:49 JST 2017
         tsutsui@mirage:/s/src/sys/arch/hppa/compile/obj.hppa/RAMDISK
 HP9000/712/60 (Gecko)
 real mem = 128 MB (73728 reserved for PROM, 113 MB used by NetBSD)
 avail mem = 111 MB
 kern.module.path=/stand/hppa/7.1/modules
 mainbus0 (root) [flex fff80000]
 pdc0 at mainbus0
 power0 at mainbus0: DR25
 cpu0 at mainbus0 hpa 0xfffbe000 path 8 irq 31: PA7100LC (Hummingbird) rev 6
 cpu0: PCXL, PA-RISC 1.1c, lev 1, cat A, 60 MHz clk
 cpu0: shadows, 32K/32K D/I caches, 64 shared TLB, 8 shared BTLB
 cpu0: PCXL (CMOS-26B) floating point, rev 1
 mem0 at mainbus0 hpa 0xfffbf000 path 9: viper rev 0, ctrl 0x0 size 128MB

 [hangs here]
 ---

 dmesg on NetBSD/hp700 5.0 is here:
  http://dmesgd.nycbug.org/index.cgi?do=view&id=3144
 ---
  :
 mainbus0 (root) [flex fff80000]
 pdc0 at mainbus0
 cpu0 at mainbus0 hpa 0xfffbe000 path 8 irq 31 ipl 0: PA7100LC (Hummingbird) rev 6
 cpu0: PCX-L, PA-RISC 1.1c, lev 1, cat A, 60 MHz clk
 cpu0: shadows, 32K/32K D/I caches, 64 shared TLB, 8 shared BTLB
 cpu0: PCX-L (CMOS-26B) floating point, rev 1
 mem0 at mainbus0 hpa 0xfffbf000 path 9: viper rev 0, ctrl 0 size 128MB
 "GIO Graphics" at mainbus0 (type 0xa, sv 0x85) hpa 0xf8000000 path 1 not configured
 lasi0 at mainbus0 hpa 0xf0000000 path 2 irq 28: rev 3.0
 gsc0 at lasi0
  :
 ---
 so it seems to fail to probe or attach "GIO Graphics" as sti(4),
 or something fails in consinit?

 "disable sti" command during USERCONF prompt makes RAMDISK kernel boot:
 ---
 >> NetBSD/hp700 LIF/FFS/LFS Boot, Revision 1.4
 >> (builds@b4.netbsd.org, Sun Apr 26 16:24:19 UTC 2009)
 >> Enter "reset" to reset system.
 Boot: [[[dk6a:]netbsd][-a][-c][-d][-s][-v][-q]] :- netbsd-RAMDISK -c
 9750684+3347264+359616=0xd89304
 Start @ 0x200000 [1=0xf89000-0xf89304]...
 Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
     2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017
     The NetBSD Foundation, Inc.  All rights reserved.
 Copyright (c) 1982, 1986, 1989, 1991, 1993
     The Regents of the University of California.  All rights reserved.

 NetBSD 7.1 (RAMDISK) #0: Sun Apr  2 18:01:49 JST 2017
         tsutsui@mirage:/s/src/sys/arch/hppa/compile/obj.hppa/RAMDISK
 HP9000/712/60 (Gecko)
 real mem = 128 MB (73728 reserved for PROM, 113 MB used by NetBSD)
 avail mem = 111 MB
 kern.module.path=/stand/hppa/7.1/modules
 userconf: configure system autoconfiguration:
 uc> disable sti
 [ 89] sti* disabled
 [ 90] sti* disabled
 [ 91] sti* disabled
 [ 92] sti* disabled
 uc> quit
 Continuing...
 mainbus0 (root) [flex fff80000]
 pdc0 at mainbus0
 power0 at mainbus0: DR25
 cpu0 at mainbus0 hpa 0xfffbe000 path 8 irq 31: PA7100LC (Hummingbird) rev 6
 cpu0: PCXL, PA-RISC 1.1c, lev 1, cat A, 60 MHz clk
 cpu0: shadows, 32K/32K D/I caches, 64 shared TLB, 8 shared BTLB
 cpu0: PCXL (CMOS-26B) floating point, rev 1
 mem0 at mainbus0 hpa 0xfffbf000 path 9: viper rev 0, ctrl 0x0 size 128MB
 "GIO Graphics" at mainbus0 (type 0xa, sv 0x85) hpa 0xf8000000 path 1 not configured
 lasi0 at mainbus0 hpa 0xf0000000 path 2 irq 27: rev 3.0
 gsc0 at lasi0
 osiop0 at gsc0 hpa 0xf0106000 path 2/0/1 irq 9: NCR53C710 rev 2, 40MHz, SCSI ID 7
 scsibus0 at osiop0: 8 targets, 8 luns per target
 iee0 at gsc0 hpa 0xf0107000 path 2/0/2 irq 8: Intel 82596CA address 08:00:09:xx:xx:xx
 com2 at gsc0 hpa 0xf0105000 path 2/0/4 irq 5: ns16550a, working fifo
 com2: console
 lpt1 at gsc0 hpa 0xf0102000 path 2/0/6 irq 7
 harmony0 at gsc0 hpa 0xf0104000 path 2/0/8 irq 13: rev 18
 audio0 at harmony0: full duplex, playback, capture
 "floppy controller" at gsc0 (type 0xa, sv 0x83) hpa 0xf010a000 path 2/0/10 not configured
 gsckbc0 at gsc0 hpa 0xf0108000 path 2/0/11 irq 26: keyboard
 pckbd0 at gsckbc0 (kbd slot)
 wskbd0 at pckbd0 mux 1
 gsckbc1 at gsc0 hpa 0xf0108100 path 2/0/12: mouse
 scsibus0: waiting 2 seconds for devices to settle...
 sd0 at scsibus0 target 6 lun 0: <IBM, DORS-32160, HP02> disk fixed
 sd0: 2048 MB, 6703 cyl, 5 head, 125 sec, 512 bytes/sect x 4194685 sectors
 sd0: sync (100.00ns offset 8), 8-bit (10.000MB/s) transfers
 boot device: sd0
 root on md0a dumps on md0b
 root file system type: ffs

  :
 ---

 Should I file another PR?

 ---
 Izumi Tsutsui

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org, port-hppa-maintainer@netbsd.org,
 gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, tsutsui@ceres.dti.ne.jp
Cc: 
Subject: Re: PR/52129 CVS commit: src/sys/arch/hppa/hppa
Date: Mon, 10 Apr 2017 10:53:06 +0100

 On 04/02/17 10:35, Izumi Tsutsui wrote:
 > The following reply was made to PR port-hppa/52129; it has been noted by GNATS.
 >
 [snip]
 >    :
 >   ---
 >   
 >   Should I file another PR?

 yes, please.
 >   
 >   ---
 >   Izumi Tsutsui
 >   
 Nick

From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: skrll@netbsd.org
Cc: gnats-bugs@NetBSD.org, tsutsui@ceres.dti.ne.jp
Subject: Re: PR/52129 CVS commit: src/sys/arch/hppa/hppa
Date: Sat, 15 Apr 2017 16:07:31 +0900

 > >   Should I file another PR?
 > 
 > yes, please.

 Filed as PR port-hppa/52162

 ---
 Izumi Tsutsui

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52129 CVS commit: [netbsd-7] src/sys/arch/hppa/hppa
Date: Thu, 20 Apr 2017 07:04:48 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Thu Apr 20 07:04:48 UTC 2017

 Modified Files:
 	src/sys/arch/hppa/hppa [netbsd-7]: machdep.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #1396):
 	sys/arch/hppa/hppa/machdep.c: revision 1.7
 PR/52129: NetBSD/hppa 7.1 fails to boot on 712/60
 Add 712/* models to cpu_model_cpuid


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.4.6.1 src/sys/arch/hppa/hppa/machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Thu, 20 Apr 2017 07:06:16 +0000
State-Changed-Why:
pullup processed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.