Pull up following revision(s) (requested by skrll in ticket #1396): 	sys/arch/hppa/hppa/machdep.c: revision 1.7 PR/52129: NetBSD/hppa 7.1 fails to boot on 712/60 Add 712/* models to cpu_model_cpuid